Wed Oct 13 12:05:12 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* port-marshaled-queue.rb: BUG#265対応(その6)

Tue Oct 12 19:10:38 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* port-marshaled-queue.rb: BUG#265対応(その5)

Tue Oct 12 17:58:13 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* port.rb: BUG#265対応(その4)

Tue Oct 12 17:38:34 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* port.rb: BUG#265対応(その3)

Tue Oct 12 17:04:35 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* port.rb: BUG#265対応(その2)

Tue Oct 12 16:20:45 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* port.rb: BUG#265対応(その1)

Thu Sep 30 17:50:15 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* bin/fairy, controller, master, node, processor, fairy.conf.tmpl,
	  master.rb, c-filter.rb, node.rb, p-filter.rb, p-task.rb, conf.rb,
	  fairy-BODY.templ: REQ#261対応完了

Thu Sep 30 16:34:27 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* lib/fairy/app/* -> bin/subcmd/*, lib/fairy/main -> lib/fairy/*:
	  REQ#261対応(その1)

Wed Sep 29 18:44:19 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* sort19.rb: BUG#258対応

Tue Sep 28 22:49:56 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* here.rb: BUG#259対応

Tue Sep 28 22:21:55 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>

	* here.rb: BUG#250対応

Tue Sep 28 22:19:34 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* testc.rb: BUG#250テスト項目追加

Tue Sep 28 20:38:52 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* testc.rb: BUG#258テスト項目追加

Tue Sep 28 20:22:48 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* testc.rb: BUG#250のテスト項目追加

Mon Sep 27 22:47:45 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* equijoin.rb: equijoin2 を equijoin に改名
	
Mon Sep 27 17:26:42 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>
	
	* equijoin.rb: BUG#257対応

Thu Sep 23 01:08:28 2010  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.conf.tmpl, equijoin.rb, group-by.rb, sort18.rb, sort19.rb,
	  controller.rb, c-sort.rb,p-basic-group-by.rb, p-group-by.rb,