@@ -1,3 +1,7 @@
+Wed Oct 13 12:43:15 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* fast-tempfile.rb:  BUG#265対応(その7)
+
 Wed Oct 13 12:05:12 2010  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* port-marshaled-queue.rb: BUG#265対応(その6)
